fix z-index conflict

--- a/css/style.css
+++ b/css/style.css
@@ -202,8 +202,7 @@ body {
       @media (max-width: 56.25em) {
         .composition__photo--p2 {
           top: 0rem;
-          transform: scale(1.3);
-          z-index: 50; } }
+          transform: scale(1.3); } }
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
