--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -34,7 +34,6 @@
             @include respond(tab-port) {
                 top: 0rem;
                 transform: scale(1.3);
-                z-index: 50;
             }
         }
 
